--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.4.3",
+    "@hapi/boom": "^7.4.2",
     "config": "^3.1.0",
     "hapi": "^18.1.0",
     "mysql": "^2.17.1",
     "require-dir": "^1.2.0",
+    "sqlstring": "^2.3.1",
     "squel": "^5.12.2"
   },
   "devDependencies": {
@@ -32,6 +34,8 @@
     "babel-plugin-inline-import": "^3.0.0",
     "babel-plugin-wildcard": "^5.0.0",
     "chai": "^4.2.0",
+    "db-migrate": "^0.11.5",
+    "db-migrate-mysql": "^1.1.10",
     "mocha": "^6.1.4",
     "npm-run-all": "^4.1.5",
     "webpack": "^4.30.0",
