--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "scripts": {
     "test": "mocha",
     "build": "webpack",
-    "start": "db:migrate && node ./dist/bundle.js",
-    "db:migrate": "npx db-migrate up",
-    "db:create": "npx db-migrate create"
+    "start": "node ./dist/bundle.js",
+    "db": "run-s db:up",
+    "db:up": "npx db-migrate up",
+    "db:down": "npx db-migrate down",
+    "db:create": "npx db-migrate create",
+    "db:reset": "npx db-migrate reset"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +24,7 @@
     "config": "^3.1.0",
     "hapi": "^18.1.0",
     "mysql": "^2.17.1",
+    "request": "^2.88.0",
     "require-dir": "^1.2.0",
     "sqlstring": "^2.3.1",
     "squel": "^5.12.2"
