--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "request": "^2.88.0",
     "require-dir": "^1.2.0",
     "sqlstring": "^2.3.1",
-    "squel": "^5.12.2"
+    "squel": "^5.12.2",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
