Add user passwords, login, and authentication
Contains a breaking change in the users table definition

--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
   "dependencies": {
     "@babel/runtime": "^7.4.3",
     "@hapi/boom": "^7.4.2",
+    "@hapi/cookie": "^10.1.0",
+    "bcrypt": "^3.0.6",
     "config": "^3.1.0",
+    "generate-password": "^1.4.1",
     "hapi": "^18.1.0",
+    "localstorage-memory": "^1.0.3",
     "mysql": "^2.17.1",
+    "node-rsa": "^1.0.5",
     "request": "^2.88.0",
     "require-dir": "^1.2.0",
     "sqlstring": "^2.3.1",
